<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginBottom="240dp"
        android:background="@drawable/ic_wave"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <Button
            android:id="@+id/galery"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_above="@+id/picture"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="78dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/shape"
            android:text="@string/galery"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/picture"
            android:layout_width="250dp"
            android:layout_height="70dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="80dp"
            android:layout_marginBottom="3dp"
            android:background="@drawable/shape"
            android:text="@string/picture"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="italic" />
    </RelativeLayout>

    <Button
        android:id="@+id/back"
        android:layout_width="115dp"
        android:layout_height="48dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="60dp"
        android:background="@drawable/shape2"
        android:text="@string/back"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>