<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PageGalery">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="550dp"
        android:background="@drawable/ic_wave"
        tools:ignore="MissingConstraints" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="372dp"
            android:layout_height="323dp"
            android:layout_above="@+id/textView"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="43dp"/>

        <TextView
            android:id="@+id/textView"
            android:layout_width="259dp"
            android:layout_height="102dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="79dp"
            android:layout_marginBottom="65dp"
            android:text="  Hasil ..."
            android:textColor="@color/black"
            android:textStyle="bold|italic"
            android:textSize="20sp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/backGalery"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:background="@drawable/shape2"
        android:text="@string/backGa"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.976" />

    <Button
        android:id="@+id/selectImage"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:background="@drawable/shape"
        android:text="@string/pickPic"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.16"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/detectImage"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:background="@drawable/shape"
        android:text="@string/detect"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.836" />

</androidx.constraintlayout.widget.ConstraintLayout>